<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/dKategorije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kategorije"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/dAutori"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dAutori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autori"
        app:layout_constraintLeft_toRightOf="@+id/dKategorije"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dKategorije" />
    <EditText
        android:id="@+id/tekstPretraga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Tekst pretrage"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="HardcodedText,LabelFor,RtlHardcoded"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/dKategorije" />

    <Button
        android:id="@+id/dPretraga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/trazi"
        app:layout_constraintBottom_toBottomOf="@+id/tekstPretraga"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dKategorije"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tekstPretraga"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/dDodajKategoriju"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        android:text="@string/dodaj_kategoriju"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/dDodajKnjigu"
        app:layout_constraintTop_toBottomOf="@+id/tekstPretraga"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/dDodajKnjigu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dodaj_knjigu"
        app:layout_constraintLeft_toRightOf="@+id/dDodajKategoriju"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dDodajKategoriju"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <ListView
        android:id="@+id/listaKategorija"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dDodajKnjigu" />
</android.support.constraint.ConstraintLayout>